example/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: label-mutate
  name: label-mutate
spec:
  ports:
  - name: 4567-4567
    port: 4567
    protocol: TCP
    targetPort: 4567
  selector:
    app: label-mutate
  type: ClusterIP
