example/mutatingAdmissionConfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "label-mutate-admissioner"
webhooks:
- name: "label-mutate.cu-admission-controller.svc"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "cu-admission-controller"
      name: "label-mutate"
      path: "/add-labels"
      port: 4567
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4ekNDQXErZ0F3SUJBZ0lVR3Q1Q3JodzdCTFJhUUJUSFoxNldGTEl3djkwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1V6RUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtkRU1Rc3dDUVlEVlFRSERBSlRXakVUTUJFRwpBMVVFQ2d3S1FXTnRaU3dnU1c1akxqRVZNQk1HQTFVRUF3d01RV050WlNCU2IyOTBJRU5CTUI0WERUSTBNVEV5Ck1USXdNVEkwT1ZvWERUSTFNVEV5TVRJd01USTBPVm93YnpFTE1Ba0dBMVVFQmhNQ1EwNHhDekFKQmdOVkJBZ00KQWtkRU1Rc3dDUVlEVlFRSERBSlRXakVUTUJFR0ExVUVDZ3dLUVdOdFpTd2dTVzVqTGpFeE1DOEdBMVVFQXd3bwpiR0ZpWld3dGJYVj [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
